--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "angular2-notifications": "^16.0.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
